tests/compiler/test_files/number_identifier.swift
// error

var 0abc = "me"